# gpd

./: CHANGELOG.md  CMakeLists.txt  LICENSE.md  README.md  filter.py  package.xml  test.py
caffe/15channels/: lenet_15_channels.prototxtconv1.bin_filter  lenet_15_channels.prototxtconv2.bin_filter  lenet_15_channels.prototxtip2.bin_filter  lenet_15_channels_train_val.prototxt  lenet_solver_15_channels.prototxt
caffe/3channels/: lenet_3_channels.prototxt
cfg/: all_axes_vino_12channels.cfg  bigbird_train_params.cfg  caffe_params.cfg  cem_vino_params.cfg  eigen_params.cfg  generate_data.cfg  hand_geometry.cfg  image_geometry.cfg  image_geometry_12channels.cfg  image_geometry_15channels.cfg  image_geometry_1channels.cfg  image_geometry_3channels.cfg  ros_eigen_params.cfg  ros_vino_params.cfg  ur5.cfg  ur5_hand_geometry.cfg  vino_params_12channels.cfg
contrib/: multiple_transform.py  transform.py
docker/: Dockerfile
include/gpd/: caffe_classifier.h  classifier.h  clustering.h  conv_layer.h  data_generator.h  dense_layer.h  fc_layer.h  grasp_detector.h  grasp_image.h  grasp_image_15_channels.h  grasp_plotter.h  layer.h  learning.h  lenet.h  net.h  openvino_classifier.h.in  sequential_importance_sampling.h
include/gpd/candidate/: antipodal.h  candidates_generator.h  finger_hand.h  frame_estimator.h  hand.h  hand_geometry.h  hand_search.h  hand_set.h  local_frame.h
include/gpd/descriptor/: image_12_channels_strategy.h  image_15_channels_strategy.h  image_1_channels_strategy.h  image_3_channels_strategy.h  image_generator.h  image_geometry.h  image_strategy.h
include/gpd/net/: caffe_classifier.h  classifier.h  conv_layer.h  dense_layer.h  eigen_classifier.h  layer.h  openvino_classifier.h.in
include/gpd/util/: cloud.h  config_file.h  eigen_utils.h  plot.h  point_list.h
include/nodes/: grasp_detection_node.h  grasp_detection_server.h  ros_params.h
launch/: baxter_15_channels.launch  baxter_3_channels.launch  classify_candidates_file_15_channels.launch  classify_candidates_file_3_channels.launch  create_grasp_images.launch  create_training_data.launch  grasp_detection_service.launch  hand_geometry.launch  importance_sampling_baxter_15_channels.launch  importance_sampling_baxter_3_channels.launch  importance_sampling_file_15_channels.launch  tutorial0.launch  tutorial1.launch  tutorial2.launch  ur5_15_channels.launch  ur5_hand_geometry.launch
launch/caffe/: classifier_15channels.launch  classifier_3channels.launch  ur5_classifier_15channels.launch
launch/lenet/: ur5_classifier_15channels.launch
lenet/15channels/: lenet_15_channels.prototxt
models/caffe/: labels.txt
models/openvino/: two_views_12_channels_curv_axis.xml  two_views_15_channels_90_deg.xml  two_views_3_channels_curv_axis.xml
models/openvino/fp16/: single_view_15_channels.mapping.json  single_view_15_channels.xml
models/openvino/fp32/: single_view_15_channels.xml
msg/: CloudIndexed.msg  CloudSamples.msg  CloudSources.msg  GraspConfig.msg  GraspConfigList.msg  SamplesMsg.msg
pytorch/: .torch_to_onxx.py.swp  hdf5_dataset.py  hdf5_loader.py  hdf5_to_lmdb.py  hdf5_to_zarr.py  multiproc.py  network.py  overfit.py  parallel_test.py  plot_loss_stats.py  reshape_hdf5.py  reshape_hdf5_mem.py  shuffle_hdf5.py  shuffle_hdf5_mem.py  torch_to_onnx.py  train_net.py  train_net2.py  train_net3.py  train_net4.py  train_net_zarr.py  zarr_loader.py
rviz/: test_service.rviz
scripts/: get_grasps.py  object_grasps.py  select_grasp.py
src/: cem_detect_grasps.cpp  detect_grasps.cpp  detect_grasps_python.cpp  generate_candidates.cpp  generate_data.cpp  label_grasps.cpp  pybind.cpp
src/gpd/: CMakeLists.txt  caffe_classifier.cpp  classifier.cpp  clustering.cpp  conv_layer.cpp  data_generator.cpp  dense_layer.cpp  fc_layer.cpp  grasp_detector.cpp  grasp_image.cpp  grasp_image_15_channels.cpp  grasp_plotter.cpp  learning.cpp  lenet.cpp  openvino_classifier.cpp  sequential_importance_sampling.cpp
src/gpd/candidate/: antipodal.cpp  candidates_generator.cpp  finger_hand.cpp  frame_estimator.cpp  hand.cpp  hand_geometry.cpp  hand_search.cpp  hand_set.cpp  local_frame.cpp
src/gpd/descriptor/: image_12_channels_strategy.cpp  image_15_channels_strategy.cpp  image_1_channels_strategy.cpp  image_3_channels_strategy.cpp  image_generator.cpp  image_geometry.cpp  image_strategy.cpp
src/gpd/net/: caffe_classifier.cpp  classifier.cpp  conv_layer.cpp  dense_layer.cpp  eigen_classifier.cpp  layer.cpp  openvino_classifier.cpp
src/gpd/util/: cloud.cpp  config_file.cpp  eigen_utils.cpp  plot.cpp  point_list.cpp
src/nodes/: classify_candidates.cpp  create_grasp_images.cpp  create_training_data.cpp  generate_candidates.cpp  grasp_detection_node.cpp  grasp_detection_server.cpp  ros_params.cpp
src/tests/: test_conv_layer.cpp  test_grasp_image.cpp  test_hdf5.cpp  test_lenet.cpp  test_occlusion.cpp  test_service.cpp
srv/: SetParameters.srv  detect_grasps.srv
tutorials/: krylon.pcd  openni2.rviz  table_mug.pcd  tutorial2.rviz  tutorial_1_grasps_camera.md  tutorial_2_grasp_select.md  tutorial_openvino.md
