<?xml version="1.0"?>
<package>
  <name>gpd</name>
  <version>1.0.0</version>
  <description>This package detects 6-DOF grasp poses for a parallel jaw gripper in 3D point clouds.</description>

  <!-- One maintainer tag required, multiple allowed, one person per tag --> 
  <!-- Example:  -->
  <!-- <maintainer email="jane.doe@example.com">Jane Doe</maintainer> -->
  <maintainer email="atp@ccs.neu.edu">Andreas ten Pas</maintainer>

  <!-- One license tag required, multiple allowed, one license per tag -->
  <!-- Commonly used license strings: -->
  <!--   BSD, MIT, Boost Software License, GPLv2, GPLv3, LGPLv2.1, LGPLv3 -->
  <license>BSD</license>

  <!-- Url tags are optional, but mutiple are allowed, one per tag -->
  <!-- Optional attribute type can be: website, bugtracker, or repository -->
  <!-- Example: -->
  <!-- <url type="website">http://wiki.ros.org/grasp_candidates_classifier</url> -->

  <!-- Author tags are optional, mutiple are allowed, one per tag -->
  <!-- Authors do not have to be maintianers, but could be -->
  <!-- Example: -->
  <!-- <author email="jane.doe@example.com">Jane Doe</author> -->

  <!-- The *_depend tags are used to specify dependencies -->
  <!-- Dependencies can be catkin packages or system dependencies -->
  <!-- Examples: -->
  
  <!-- Use build_depend for packages you need at compile time: -->
  <build_depend>cmake_modules</build_depend> 
  <build_depend>eigen_conversions</build_depend> 
  <build_depend>geometry_msgs</build_depend> 
  <build_depend>libpcl-all-dev</build_depend>
  <build_depend>message_generation</build_depend> 
  <build_depend>roscpp</build_depend>
  <build_depend>sensor_msgs</build_depend> 
  <build_depend>std_msgs</build_depend> 
  
  <!-- Use run_depend for packages you need at runtime: -->
  <run_depend>cmake_modules</run_depend>
  <run_depend>eigen_conversions</run_depend>
  <run_depend>geometry_msgs</run_depend>
  <run_depend>libpcl-all</run_depend>
  <run_depend>message_runtime</run_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>sensor_msgs</run_depend>
  <run_depend>std_msgs</run_depend>
  
  <!-- Use test_depend for packages you need only for testing: -->
  <!--   <test_depend>gtest</test_depend> -->

  <buildtool_depend>catkin</buildtool_depend>


  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->

  </export>
</package>
